Itchy trigger finger commited too soon. Initdb now uses 'wiki load' command.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@221 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.5.2
  * "view" checkboxes in the timeline view now reflect the current state.
  * The subversion repository is now indexed by "svnadmin initdb" instead of
    trac.cgi at first execution.
+ * trac-admin now has a 'wiki dump' command to export all pages.
  * Most of the inline css is removed.
  * IE6 navbar problem fixed.
  * Fixed bugs: #69, #73, #77, #78, #79, #80, #84, #85, #86, #89, #90, 
