--- a/THANKS
+++ b/THANKS
@@ -4,6 +4,7 @@ Richard Hult      richard@imendio.com
 Jennifer Murtell  jen@jmurtell.com
 Mark Rowe         mrowe@bluewire.net.nz
 Emmeran Seehuber  rototor@rototor.de
+Stephen Hansen    shansen@advpubtech.com
 
 Diggs and Lula
 
