--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
 Trac 0.6 (March __, 2004)
 http://svn.edgewall.com/repos/trac/trunk/
 
+ * View diffs between wiki page edits.
+ * Support for tables in the wiki. (Thanks to Stephen Hansen)
  * Colored reports. Use colors to show priority, etc. 
  * Report groups. Group results by a column.
+ * Multi-line report rows.
  * Better, locale-based date and time formatting. 
+ * Overall cosmetic improvements.
  * Fixed bugs: #16, #103, #110, #112, #113, #114, #117,#120
 	
 Trac 0.5.2 (March 2, 2004)
