* Added support for processor macros.  * Added a simple reStructuredText processor macro.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@265 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ http://svn.edgewall.com/repos/trac/trunk/
  * View diffs between wiki page edits.
  * Support for tables in the wiki. (Thanks to Stephen Hansen)
  * Colored reports. Use colors to show priority, etc. 
+ * Support for custom wiki processor macros.
+ * ReStructuredText support (through a processor macro)
  * Report groups. Group results by a column.
  * Multi-line report rows.
  * Download report in CSV (Comma Separated Value) and tab-separated format
