--- a/THANKS
+++ b/THANKS
@@ -2,11 +2,12 @@ Eric Gillespie    epg@netbsd.org
 Mikael Hallendal  micke@imendio.com
 Richard Hult      richard@imendio.com
 Jennifer Murtell  jen@jmurtell.com
+Nicolas Riley     sabi
 Mark Rowe         mrowe@bluewire.net.nz
 Emmeran Seehuber  rototor@rototor.de
 Stephen Hansen    shansen@advpubtech.com
 
-Diggs and Lula
+Diggs and Lula (pawprint contributors)
 
 And everyone who keeps sending feedback, helping us improve Trac.
 
