--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,10 @@
+Rocky Burt        rocky.burt@myrealbox.com
 Eric Gillespie    epg@netbsd.org
 Mikael Hallendal  micke@imendio.com
 Stephen Hansen    shansen@advpubtech.com
+Francois Harvey   fharvey@securiweb.net
 Richard Hult      richard@imendio.com
+Ivo Looser        ivo.looser@login.ch
 Jennifer Murtell  jen@jmurtell.com
 Nicolas Riley     sabi
 Mark Rowe         mrowe@bluewire.net.nz
