That'd be Rutherfurd, not rutherford.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@423 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -8,7 +8,7 @@ Ivo Looser        ivo.looser@login.ch
 Jennifer Murtell  jen@jmurtell.com
 Nicolas Riley     sabi
 Mark Rowe         mrowe@bluewire.net.nz
-Ollie Rutherford  ollie
+Olliver Rutherfurd  ollie
 Emmeran Seehuber  rototor@rototor.de
 
 Diggs and Lula (pawprint contributors)
