--- a/THANKS
+++ b/THANKS
@@ -2,6 +2,7 @@ Rocky Burt        rocky.burt@myrealbox.com
 Eric Gillespie    epg@netbsd.org
 Mikael Hallendal  micke@imendio.com
 Stephen Hansen    shansen@advpubtech.com
+Laurie Harper     zodiac@holoweb.net
 Francois Harvey   fharvey@securiweb.net
 Richard Hult      richard@imendio.com
 Ivo Looser        ivo.looser@login.ch
