Rudimentary/Ugly/Temporary error reporting for role errors.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@463 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -5,6 +5,7 @@ Stephen Hansen    shansen@advpubtech.com
 Laurie Harper     zodiac@holoweb.net
 Francois Harvey   fharvey@securiweb.net
 Richard Hult      richard@imendio.com
+Nuutti Kotivuori  naked@iki.fi
 Ivo Looser        ivo.looser@login.ch
 Jennifer Murtell  jen@jmurtell.com
 Nicolas Riley     sabi
