Only display text-types with default mimeviewer. Fixes #296.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@464 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -13,7 +13,9 @@ Mark Rowe         mrowe@bluewire.net.nz
 Olliver Rutherfurd  ollie
 Emmeran Seehuber  rototor@rototor.de
 
-Diggs and Lula (pawprint contributors)
+The elusive Anonymous (for wiki edits and bug reports)
+
+Diggs and Lula (official pawprint contributors)
 
 And everyone who keeps sending feedback, helping us improve Trac.
 
