Whole line is clickable in report list. Highlight line on mouse-hover for added readability. Fixes #190.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@466 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,19 +1,20 @@
-Rocky Burt        rocky.burt@myrealbox.com
-Eric Gillespie    epg@netbsd.org
-Mikael Hallendal  micke@imendio.com
-Stephen Hansen    shansen@advpubtech.com
-Laurie Harper     zodiac@holoweb.net
-Francois Harvey   fharvey@securiweb.net
-Richard Hult      richard@imendio.com
-Nuutti Kotivuori  naked@iki.fi
-Ivo Looser        ivo.looser@login.ch
-Jennifer Murtell  jen@jmurtell.com
-Nicolas Riley     sabi
-Mark Rowe         mrowe@bluewire.net.nz
-Olliver Rutherfurd  ollie
-Emmeran Seehuber  rototor@rototor.de
+Rocky Burt              rocky.burt@myrealbox.com
+Eric Gillespie          epg@netbsd.org
+Mikael Hallendal         micke@imendio.com
+Stephen Hansen          shansen@advpubtech.com
+Laurie Harper           zodiac@holoweb.net
+Francois Harvey         fharvey@securiweb.net
+Richard Hult            richard@imendio.com
+Nuutti Kotivuori        naked@iki.fi
+Ivo Looser              ivo.looser@login.ch
+Jennifer Murtell        jen@jmurtell.com
+Nicolas Riley           sabi
+Mark Rowe               mrowe@bluewire.net.nz
+Olliver Rutherfurd      ollie
+Andreas Schrattenecker  vittorio
+Emmeran Seehuber        rototor@rototor.de
 
-The elusive Anonymous (for wiki edits and bug reports)
+The Elusive Anonymous
 
 Diggs and Lula (official pawprint contributors)
 
