Updates to the release docs.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@490 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ http://svn.edgewall.com/repos/trac/tags/trac-0.7
  * UTF-8 character encoding support.
  * Wiki page attachments.
  * Syntax coloring supporting >35 languages, using SilverCity or GNU Enscript.
+ * Better support for ReStructuredText.
  * Logging support, including syslog and windows eventlog.
  * Ticket attachments.
  * Import tickets from Bugzilla (contributed by Mark Rowe).
