Updated release docs for 0.7.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@545 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Jonas Borgström <jonas@edgewall.com>
 Daniel Lundin <daniel@edgewall.com>
 Rocky Burt <rocky@carterscove.com>
+Christopher Lenz <cmlenz@gmx.de>
 
 See also THANKS for people who have contributed to the project.
