Highlight proper module in navbar for attachments. Closes #404.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@592 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,6 +1,7 @@
 Rocky Burt              rocky.burt@myrealbox.com
+Daragh Fitzpatrick      Daragh@i2i-Tech.com
 Eric Gillespie          epg@netbsd.org
-Mikael Hallendal         micke@imendio.com
+Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
 Laurie Harper           zodiac@holoweb.net
 Francois Harvey         fharvey@securiweb.net
@@ -8,6 +9,7 @@ Richard Hult            richard@imendio.com
 Nuutti Kotivuori        naked@iki.fi
 Christopher Lenz        cmlenz@gmx.de
 Ivo Looser              ivo.looser@login.ch
+James Moger             jamesm@transonic.com
 Jennifer Murtell        jen@jmurtell.com
 Nicolas Riley           sabi
 Mark Rowe               mrowe@bluewire.net.nz
@@ -16,7 +18,7 @@ Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
-The Elusive Anonymous
+The ever so elusive Anonymous
 
 Diggs and Lula (official pawprint contributors)
 
@@ -24,4 +26,4 @@ And everyone who keeps sending feedback, helping us improve Trac.
 
 -- 
 Our apologies to everyone we forgot to mention, but without whose invaluable
-help, Trac would not continue to rapidly evolve. 
+help, Trac would not continue to rapidly evolve.
