Remove hard-coded protocol 'http' for URLs in RSS feed. Closes #522.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@774 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,7 @@
+Christopher Armstrong   radix
 Rocky Burt              rocky.burt@myrealbox.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
+dju'
 Eric Gillespie          epg@netbsd.org
 Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
