Treat newlines in commit messages as wiki-newlines, to format multi-line messages. Many thanks to Cap Petschulat for the patch. Closes #352.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@776 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -14,6 +14,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Jennifer Murtell        jen@jmurtell.com
 juracy@wsh.com.br
+Cap Petschulat          cap@cdres.com
 Nicolas Riley           sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
