Sabi says obey!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@777 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -15,7 +15,7 @@ James Moger             jamesm@transonic.com
 Jennifer Murtell        jen@jmurtell.com
 juracy@wsh.com.br
 Cap Petschulat          cap@cdres.com
-Nicolas Riley           sabi
+Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
