Applied bugzilla2trac.py enhancement patch from Bill Soudan, many thanks!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@815 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
+Bill Soudan             bill@soudan.net
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
