--- a/THANKS
+++ b/THANKS
@@ -10,6 +10,7 @@ Francois Harvey         fharvey@securiweb.net
 Michael Hope            michael.hope@hamjet.co.nz
 Richard Hult            richard@imendio.com
 Nuutti Kotivuori        naked@iki.fi
+Ian Leader              ian.leader@line.co.uk
 Christopher Lenz        cmlenz@gmx.de
 Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
