Applied a few patches from Tony Brkic, many thanks!
 * Added verilog syntax coloring support. Closes #606.
 * Various enhancements of the restructured text processor, closes #635, #649, #650, #655.



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@847 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,6 @@
 Christopher Armstrong   radix
 Rocky Burt              rocky.burt@myrealbox.com
+Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
 dju'
 Felix Colins            felix@keyghost.com
