--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,6 @@ Jonas Borgström <jonas@edgewall.com>
 Daniel Lundin <daniel@edgewall.com>
 Rocky Burt <rocky@carterscove.com>
 Christopher Lenz <cmlenz@gmx.de>
+Francois Harvey <fharvey@securiweb.net>
 
 See also THANKS for people who have contributed to the project.
