Updated visual identity -- logos. Corrected Juracy Filho's name in THANKS.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1002 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -18,7 +18,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
-juracy@wsh.com.br
+Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
