We need to call os.waitpid on non-windows systems, otherwise subversions internal diff function will leave zombie-processes behind. Thanks for the patch zilvinas.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1038 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@ Ivo Looser              ivo.looser@login.ch
 James Moger             jamesm@transonic.com
 Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
+Jacob Norda             jacobnorda@gmail.com
 Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
@@ -26,6 +27,7 @@ Olliver Rutherfurd      ollie
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
+Zilvinas Valinskas      zilvinas@gemtek.lt
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
