* Removed unimplemented time zone settings.  * Merged patch from pkou. Closes #901. Many thanks.  * Include TracTicketsCustomFields in docs.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1042 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
+pkou                    pkou@ua.fm
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
