A few improvements for the bugzilla2trac script, thanks Dirk
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1065 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 Christopher Armstrong   radix
-Juanma Barranquero
+Juanma Barranquero      lektu@terra.es
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
