--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,46 @@
+Trac 0.8 'Qualia'  (Nov 15, 2004)
+http://svn.edgewall.com/repos/trac/tags/trac-0.8
+
+ * Roadmap module.
+ * Support for custom ticket properties.
+ * Wiki administration features.
+ * Advanced ticket queries.
+ * Improved diff display.
+ * User preferences.
+ * Wiki editing (near-wysiwyg) aids a la wikipedia.
+ * Improved email notification.
+ * Fixed bugs: #13, #63, #99, #100, #158, #164, #203, #210, 
+   #225, #264, #304, #306, #326, #346, #347, #351, 
+   #352, #364, #373, #375, #405, #411, #416, #431, 
+   #433, #434, #436, #438, #443, #445, #446, #447, 
+   #450, #452, #453, #455, #458, #460, #465, #468, 
+   #471, #472, #473, #474, #477, #478, #479, #480, 
+   #482, #483, #486, #487, #489, #491, #492, #494, 
+   #496, #501, #503, #506, #510, #512, #513, #514, 
+   #516, #522, #524, #526, #527, #528, #530, #532, 
+   #536, #537, #538, #539, #542, #543, #545, #546, 
+   #550, #551, #552, #553, #555, #556, #557, #558, 
+   #559, #560, #565, #567, #568, #570, #572, #574, 
+   #577, #578, #580, #581, #583, #587, #589, #591, 
+   #593, #594, #597, #598, #599, #600, #601, #602, 
+   #606, #609, #610, #612, #613, #616, #618, #619, 
+   #620, #622, #623, #626, #627, #628, #630, #631, 
+   #634, #644, #647, #648, #651, #652, #657, #658, 
+   #660, #664, #668, #669, #670, #671, #674, #675, 
+   #676, #677, #678, #680, #690, #692, #696, #698, 
+   #699, #703, #705, #706, #708, #709, #713, #714, 
+   #715, #716, #718, #720, #721, #722, #726, #727, 
+   #730, #732, #734, #735, #736, #737, #738, #741, 
+   #742, #743, #744, #745, #748, #749, #750, #751, 
+   #752, #759, #762, #764, #768, #769, #770, #771, 
+   #774, #775, #776, #778, #779, #780, #785, #789, 
+   #793, #798, #800, #806, #807, #815, #816, #817, 
+   #818, #829, #830, #831, #833, #836, #844, #846, 
+   #848, #850, #851, #852, #872, #873, #877, #878, 
+   #885, #888, #889, #892, #901, #903, #907, #912, 
+   #916, #923, #929, #931, #932, #935.
+
+
 Trac 0.7.1 'Argento'  (Jun, 2004)
 http://svn.edgewall.com/repos/trac/tags/trac-0.7.1
 
