Applied patch to run tracd as a daemon. Thanks misc.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1102 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -26,6 +26,7 @@ Nicholas Riley          sabi
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 pkou                    pkou@ua.fm
+Michael Scherer         misc@mandrake.org
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Bill Soudan             bill@soudan.net
