Applied cboos' patch to #295, adding better support for displaying branches, tags and renames in changesets. Many thanks!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1109 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,6 @@
 Christopher Armstrong   radix
 Juanma Barranquero      lektu@terra.es
+Christian Boos          cboos@bct-technology.com
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
