Take included event types into account when generating the RSS link for the timeline. Closes #556.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1139 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ Jacob Norda             jacobnorda@gmail.com
 Juracy Filho            juracy@gmail.com
 Cap Petschulat          cap@cdres.com
 Nicholas Riley          sabi
+Manuzhai                manuzhai@gmail.com
 Mark Rowe               mrowe@bluewire.net.nz
 Olliver Rutherfurd      ollie
 pkou                    pkou@ua.fm
