--- a/THANKS
+++ b/THANKS
@@ -9,6 +9,7 @@ Daragh Fitzpatrick      Daragh@i2i-Tech.com
 dju'
 Felix Colins            felix@keyghost.com
 Eric Gillespie          epg@netbsd.org
+Shun-ichi Goto          gotoh@taiyo.co.jp
 Mikael Hallendal        micke@imendio.com
 Stephen Hansen          shansen@advpubtech.com
 Laurie Harper           zodiac@holoweb.net
