Add a ''wiki remove <page>'' command to [wiki:TracAdmin trac-admin]. Thanks for the patch, Noah! Closes #729.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1316 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -34,6 +34,7 @@ pkou                    pkou@ua.fm
 Michael Scherer         misc@mandrake.org
 Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
+Noah Slater             nslater@gmail.com
 Bill Soudan             bill@soudan.net
 Zilvinas Valinskas      zilvinas@gemtek.lt
 Dmitry Yusupov          dmitry_yus@yahoo.com
