Add {{{always_notify_owner}}} feature for ticket notifications. Closes #866. Thanks to Wes Crucius for the patch!
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1343 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -5,6 +5,7 @@ Juanma Barranquero      lektu@terra.es
 Christian Boos          cboos@bct-technology.com
 Rocky Burt              rocky.burt@myrealbox.com
 Toni Brkic              toni.brkic@switchcore.com
+Wesley Crucius          wcrucius@sandc.com
 Daragh Fitzpatrick      Daragh@i2i-Tech.com
 dju'
 Felix Colins            felix@keyghost.com
