Add {{{[[PageOutline]]}}} wiki macro based on Alec Thomas' [http://svn.swapoff.org/trachacks/wiki/TocMacro TOC macro].
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1358 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -37,6 +37,7 @@ Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Noah Slater             nslater@gmail.com
 Bill Soudan             bill@soudan.net
+Alec Thomas             alec@swapoff.org
 Zilvinas Valinskas      zilvinas@gemtek.lt
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
