--- a/THANKS
+++ b/THANKS
@@ -40,6 +40,7 @@ Noah Slater             nslater@gmail.com
 Bill Soudan             bill@soudan.net
 Alec Thomas             alec@swapoff.org
 Zilvinas Valinskas      zilvinas@gemtek.lt
+Jason Vasquez           jason@mugfu.com
 Dmitry Yusupov          dmitry_yus@yahoo.com
 
 The ever so elusive Anonymous.
