Make date header in notification emails independent of system locale. Closes #1182. Thanks to Angel Marin for the patch.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1512 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -22,6 +22,7 @@ Nuutti Kotivuori        naked@iki.fi
 Ian Leader              ian.leader@line.co.uk
 Christopher Lenz        cmlenz@gmx.de
 Ivo Looser              ivo.looser@login.ch
+Angel Marin             anmar@gmx.net
 James Moger             jamesm@transonic.com
 Tim Moloney             moloney@mrsl.com
 Jennifer Murtell        jen@jmurtell.com
