Provide more fine-grained ticket permissions, based on a patch by Ludvig Strigeus. This allows you to grant permissions to only add comments or attach files to tickets, but not modify properties or change the status, for example. Closes #1211, #1396 and #1435.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1516 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -39,6 +39,7 @@ Andreas Schrattenecker  vittorio
 Emmeran Seehuber        rototor@rototor.de
 Noah Slater             nslater@gmail.com
 Bill Soudan             bill@soudan.net
+Ludvig Strigeus
 Alec Thomas             alec@swapoff.org
 Zilvinas Valinskas      zilvinas@gemtek.lt
 Jason Vasquez           jason@mugfu.com
